<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="main_title">My Nanodegree Apps!</string>
    <string name="streamer_app_title">Spotify Streamer</string>
    <string name="scores_app_title">Scores App</string>
    <string name="library_app_title">Library App</string>
    <string name="build_it_bigger_app_title">Build it bigger</string>
    <string name="xyz_reader_app_title">xyz Reader</string>
    <string name="my_own_app_title">Capstone: My Own App</string>
</resources>
