<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_title"
        android:id="@+id/headline"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/streamer_app_title"
        android:id="@+id/button_streamer_app"
        android:layout_below="@+id/headline"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:capitalize="sentences"
        android:height="@dimen/button_height"
        android:backgroundTint="@color/colorButtonOrange"
        android:backgroundTintMode="multiply" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/scores_app_title"
        android:id="@+id/button_scores_app"
        android:capitalize="sentences"
        android:height="@dimen/button_height"
        android:layout_below="@+id/button_streamer_app"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorButtonOrange"
        android:backgroundTintMode="multiply" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/library_app_title"
        android:id="@+id/button_library_app"
        android:capitalize="sentences"
        android:height="@dimen/button_height"
        android:layout_below="@+id/button_scores_app"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorButtonOrange"
        android:backgroundTintMode="multiply" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/build_it_bigger_app_title"
        android:id="@+id/button_build_it_bigger_app"
        android:capitalize="sentences"
        android:height="@dimen/button_height"
        android:layout_below="@+id/button_library_app"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorButtonOrange"
        android:backgroundTintMode="multiply" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/xyz_reader_app_title"
        android:id="@+id/button_reader_app"
        android:capitalize="sentences"
        android:height="@dimen/button_height"
        android:layout_below="@+id/button_build_it_bigger_app"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorButtonOrange"
        android:backgroundTintMode="multiply" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/my_own_app_title"
        android:id="@+id/button_my_own_app"
        android:capitalize="sentences"
        android:height="@dimen/button_height"
        android:layout_below="@+id/button_reader_app"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorButtonRed"
        android:backgroundTintMode="multiply" />
</RelativeLayout>
